# padih-eudald-massana

./: CMakeLists.txt  README.md  diffdrive_agribot.xml  diffdrive_padihbot.xml  package.xml
config/: diffdrive_controllers.yaml  dual_ekf_navsat_params.yaml  ekf.yaml  general_params.yaml  gps_wpf_demo.mvc  mapper_params_online_async.yaml  nav2_params.yaml  ukf.yaml
data/: Transformationl_ETRF89_v1.0.xlsx
data/Comandament_gran/: ADCtest.py  Comandament.py  ManWorker.py  OrtoView.py  comandamentView.py  comandamentView.ui  coord_030.csv  coord_041.geojson  coord_042.geojson  coord_043.geojson  coord_044.geojson  coords_01-09_18%3A01.csv  coords_03-25_17%3A01.csv  coords_03-25_17%3A03.csv  coords_03-25_17%3A26.csv  coords_03-25_17-03.csv.bak  coords_03-25_17-26.csv.bak  disp_Qtimage.py  disp_img.py  encoder.py  eudald_test_capa1_bo.geojson  maset_2.rmf~  raster_test.py  test_encoder.py  ui_comandamentView.py
data/Comandament_gran/.qt_for_python/uic/: comandament.py  comandamentView.py  demoGraphicsView.py
data/RobotCAN/: 50-usb-can.rules  CANalystii.py  Capataç-bo.geojson  Comandes per desenvolupament remot.txt  Control_motor.ui  Control_motor_CAN.py  Control_motor_ui.py  GPSWorker.py  MapaTest.py  MapaView.py  Mapa_ui.py  Motors.desktop  MovWorker.py  Noves Coordenades 6.geojson  Para.desktop  atura.sh  capataç.geojson  comandamentView.py  constants.json  constants.ui  constants_ui.py  coord_043.geojson  gira coordenades.java  globals.py  iniserials.sh  mapa.ui  para.sh  testgeojson.ipynb
data/connex_devKitM1-cmd-gran/: platformio.ini
data/connex_devKitM1-cmd-gran/src/: main.cpp
hardware/: canalystii.cpp  diffbot_system.cpp  plc_communication.cpp
hardware/include/: canalystii.hpp  controlcan.hpp
hardware/include/diffdrive_agribot/: diffbot_system.hpp  plc_communication.hpp  visibility_control.h  wheel.hpp
hardware/include/diffdrive_padihbot/: diffbot_system.hpp  visibility_control.h  wheel.hpp
launch/: README.md  amcl_launch.py  diffbot.launch.py  dual_ekf_navsat.launch.py  gazebo.launch.py  gazebo_gps_world.launch.py  joy_control.launch.py  map.launch.py  mapping_launch.py  mapviz.launch.py  move_robot.launch.py  navigation_launch.py  platform.launch.py  rsp.launch.py  sensors.launch.py  sim.launch.py  view_robot.launch.py
maps/: agropolis.pgm  agropolis.yaml  agropolis_01.data  agropolis_01.pgm  agropolis_01.yaml  agropolis_02.pgm  agropolis_02.yaml  agropolis_03.data  agropolis_03.pgm  agropolis_03.yaml  house_map.data  house_map.pgm  house_map.yaml  sonoma_map.data  sonoma_map.pgm  sonoma_map.yaml  test_map.data  test_map.pgm  test_map.yaml  turtlebot_map.data  turtlebot_map.pgm  turtlebot_map.yaml  upc_indoors_map.data  upc_indoors_map.pgm  upc_indoors_map.yaml
python_nodes/: interactive_waypoint_follower.py  joy_gps_adapter.py  logged_waypoint_follower.py  turret_joy.py
rviz/: mapping.rviz  navigation.rviz
src/description/: OS1-32.xacro  agri_bot.urdf.xacro  agri_bot_core.xacro  agri_bot_core_simple.xacro  agribot_diffdrive_control.xacro  camera.xacro  gazebo_diff_drive_control.xacro  gps.xacro  imu.xacro  lidar.xacro  padih_bot.urdf.xacro  padih_bot_colors.xacro  padih_bot_core.xacro  padih_bot_diffdrive_control.xacro
src/meshes/: base_link.STL  caster_wheel_link.STL  left_wheel_link.STL  lidar-link.STL  os1_32.STL  right_wheel_link.STL  turret_link.STL
worlds/: sonoma_raceway.world
